// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReloadButton /> should match to snapshot when props.isLoading === true 1`] = `
<div
  className="ReloadButton className"
>
  <button
    className="WebWidgetHeader__button ReloadButton__btn"
    onClick={[Function]}
    type="button"
  >
    <WidgetBackIcon />
  </button>
</div>
`;

exports[`<ReloadButton /> should match to snapshot when render default 1`] = `
<div
  className="ReloadButton className"
>
  <button
    className="WebWidgetHeader__button ReloadButton__btn"
    onClick={[Function]}
    type="button"
  >
    <WidgetRefreshIcon />
  </button>
</div>
`;
